--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-		<h1>Hora da Dúvida!</h1>
+		<h1 class="title">Hora da Dúvida!</h1>
 		<div class="button-generator">
 			<button class="generate-song-button js-generate-song-button"> Start Song! </button>
 		</div>
